--- a/client/app/styles/less/variables.less
+++ b/client/app/styles/less/variables.less
@@ -188,7 +188,7 @@
 @sidebar-background:    #dedede;
 
 
-@sidepreview-width : 440px;
+@sidepreview-width : 400px;
 
 @notification-pane-width: 300px;
 
